crates/toml/tests/snapshots/invalid/key/after-value.stderr
TOML parse error at line 1, column 15
  |
1 | first = "Tom" last = "Preston-Werner" # INVALID
  |               ^
unexpected key or value, expected newline, `#`
